create form item

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,6 +1,10 @@
 .ls-layout {
   height: 100%;
 
+  &-content {
+    overflow: auto;
+  }
+
   &-auth {
     display: flex;
     align-items: center;
